Fixed drag-and-drop lightblue on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,16 @@
   gray: #838283
 */
 
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Old versions of Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome, Opera and Firefox */
+}
+
 .debug {
   font-size: 8px;
   color: lightblue;
